(test
 (name main)
 (package picos_stdio)
 (action
  (progn
   (run %{test} -brief "Picos Computation")
   (run %{test} -brief "Picos Current")
   (run %{test} -brief "Picos FLS (excluding Current)")
   (run %{test} -brief "Picos TLS")
   (run %{test} -brief "Picos DLS")
   (run %{test} -brief "Picos Mutex")
   (run %{test} -brief "Picos Semaphore")
   (run %{test} -brief "Picos Spawn")
   (run %{test} -brief "Picos Yield")
   (run %{test} -brief "Picos Cancel_after with Picos_select")
   (run %{test} -brief "Ref with Picos_sync.Mutex")
   (run %{test} -brief "Picos_mpmcq")
   (run %{test} -brief "Picos_mpscq")
   (run %{test} -brief "Picos_htbl")
   (run %{test} -brief "Picos_stdio")
   (run %{test} -brief "Picos_sync Stream")
   (run %{test} -brief "Fib")
   (run %{test} -brief "Picos binaries")
   (run %{test} -brief "Bounded_q with Picos_sync")
   (run %{test} -brief "Memory usage")))
 (libraries
  picos
  picos.domain
  picos.finally
  picos.htbl
  picos.mpmcq
  picos.mpscq
  picos_stdio.select
  picos_stdio
  picos.structured
  picos.sync
  picos.thread
  (select
   scheduler.ml
   from
   (picos_stdio.fifos -> scheduler.ocaml5.ml)
   (picos_threaded -> scheduler.ocaml4.ml))
  (select
   bench_fib.ml
   from
   (picos.randos picos.multififos -> bench_fib.ocaml5.ml)
   (-> bench_fib.ocaml4.ml))
  multicore-bench
  multicore-magic
  backoff))
