(test
 (package picos_meta)
 (name main)
 (action
  (progn
   (run %{test} -brief "Picos Computation")
   (run %{test} -brief "Picos Current")
   (run %{test} -brief "Picos FLS (excluding Current)")
   (run %{test} -brief "Picos TLS")
   (run %{test} -brief "Picos DLS")
   (run %{test} -brief "Yield with Picos_std_sync")
   (run %{test} -brief "Picos Semaphore")
   (run %{test} -brief "Picos Spawn")
   (run %{test} -brief "Picos Yield")
   (run %{test} -brief "Picos Cancel_after with Picos_select")
   (run %{test} -brief "Ref with Picos_std_sync")
   (run %{test} -brief "Picos_mpmcq")
   (run %{test} -brief "Picos_mpscq")
   (run %{test} -brief "Picos_htbl")
   (run %{test} -brief "Hashtbl with Picos_std_sync")
   (run %{test} -brief "Picos_stdio")
   (run %{test} -brief "Picos_sync Stream")
   (run %{test} -brief "Fib")
   (run %{test} -brief "Picos binaries")
   (run %{test} -brief "Bounded_q with Picos_std_sync")
   (run %{test} -brief "Memory usage")
   ;;
   ))
 (foreign_stubs
  (language c)
  (names bench_stubs))
 (libraries
  backoff
  multicore-bench
  multicore-magic
  picos
  picos.domain
  picos.thread
  picos_aux.htbl
  picos_aux.mpmcq
  picos_aux.mpscq
  picos_io
  picos_io.select
  picos_std.awaitable
  picos_std.finally
  picos_std.structured
  picos_std.sync
  (select
   scheduler.ml
   from
   (picos_mux.fifo -> scheduler.ocaml5.ml)
   (picos_mux.thread -> scheduler.ocaml4.ml))
  (select
   bench_fib.ml
   from
   (picos_mux.random picos_mux.multififo -> bench_fib.ocaml5.ml)
   (-> bench_fib.ocaml4.ml))))
