(library
 (name test_scheduler)
 (modules test_scheduler)
 (libraries
  (re_export picos)
  picos.select
  (select
   test_scheduler.ml
   from
   (picos.fifos
    picos.multififos
    picos.randos
    picos.lwt_unix
    picos.thread
    ->
    test_scheduler.ocaml5.ml)
   (picos.threaded lwt.unix -> test_scheduler.ocaml4.ml))))

(library
 (name test_util)
 (modules test_util))

;;

(test
 (name test_picos)
 (modules test_picos)
 (libraries
  test_scheduler
  picos.finally
  backoff
  alcotest
  unix
  threads.posix
  domain_shims))

;;

(test
 (name test_sync)
 (modules test_sync)
 (libraries
  picos.structured
  picos.sync
  test_scheduler
  alcotest
  domain_shims
  unix)
 (action
  (progn
   (run %{test} -- "Event" 0)
   (run %{test} -- "Lazy" 0)
   (run %{test} -- "Lazy" 1)
   (run %{test} -- "Semaphore" 0)
   (run %{test} -- "Semaphore" 1)
   (run %{test} -- "Mutex and Condition" 0)
   (run %{test} -- "Mutex and Condition" 1)
   (run %{test} -- "Mutex and Condition" 2))))

;;

(test
 (name test_lwt_unix)
 (modules test_lwt_unix)
 (build_if
  (>= %{ocaml_version} 5.0.0))
 (libraries picos.lwt_unix picos.structured alcotest))

;;

(rule
 (action
  (progn
   (copy ../lib/picos/bootstrap/picos_bootstrap.ml picos_bootstrap.ml))))

(test
 (name test_picos_dscheck)
 (modules test_picos_dscheck picos_bootstrap)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries exn_bt backoff traced_atomic dscheck alcotest))

;;

(test
 (name test_server_and_client)
 (modules test_server_and_client)
 (libraries
  test_scheduler
  picos.finally
  picos.stdio
  picos.structured
  picos.sync))

;;

(test
 (name test_stdio)
 (modules test_stdio)
 (libraries
  test_scheduler
  picos.finally
  picos.mpscq
  picos.stdio
  picos.structured
  alcotest))

(test
 (name test_stdio_cohttp)
 (modules test_stdio_cohttp)
 (libraries picos.finally picos.stdio.cohttp picos.structured test_scheduler))

;;

(test
 (name test_stdio_with_lwt)
 (modules test_stdio_with_lwt)
 (libraries
  test_scheduler
  picos.stdio
  picos.select
  alcotest
  lwt
  lwt.unix
  threads.posix))

;;

(test
 (name test_select)
 (modules test_select)
 (libraries
  picos.finally
  picos.structured
  picos.threaded
  picos.select
  alcotest
  domain_shims))

;;

(test
 (name test_mpscq)
 (modules test_mpscq)
 (libraries
  picos.mpscq
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run))

(test
 (name test_mpmcq)
 (modules test_mpmcq)
 (libraries
  picos.mpmcq
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run))

(rule
 (action
  (progn
   (copy ../lib/picos_mpmcq/picos_mpmcq.ml picos_mpmcq.ml))))

(test
 (name test_mpmcq_dscheck)
 (modules test_mpmcq_dscheck picos_mpmcq)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries backoff multicore-magic-dscheck dscheck alcotest)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (name test_htbl)
 (modules test_htbl)
 (libraries
  picos.htbl
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run))

;;

(test
 (name test_js_of_ocaml)
 (modules test_js_of_ocaml)
 (modes js)
 (js_of_ocaml
  (flags --enable=effects))
 (build_if
  (and
   (<> %{architecture} i386)
   (<> %{architecture} riscv)))
 (libraries picos))

;;

(test
 (name test_schedulers)
 (modules test_schedulers)
 (libraries picos picos.structured test_scheduler test_util alcotest))

;;

(test
 (name test_structured)
 (modules test_structured)
 (libraries
  picos
  picos.mpscq
  picos.structured
  picos.sync
  test_scheduler
  test_util
  alcotest))

;;

(test
 (name test_finally)
 (modules test_finally)
 (libraries picos picos.finally test_scheduler test_util alcotest))

;;

(test
 (name test_picos_lwt_unix_with_cohttp)
 (modules test_picos_lwt_unix_with_cohttp)
 (build_if
  (and
   (>= %{ocaml_version} 5)
   %{lib-available:cohttp-lwt-unix}
   %{lib-available:cohttp-lwt}
   %{lib-available:cohttp}
   %{lib-available:conduit-lwt-unix}
   %{lib-available:uri}))
 (libraries
  picos.lwt_unix
  picos.structured
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  conduit-lwt-unix
  uri))
