(library
 (package picos_meta)
 (name test_scheduler)
 (modules test_scheduler)
 (libraries
  (re_export picos)
  picos_io.select
  (select
   test_scheduler.ml
   from
   (picos.thread
    picos_lwt.unix
    picos_mux.random
    picos_mux.fifo
    picos_mux.multififo
    ->
    test_scheduler.ocaml5.ml)
   (picos_mux.thread lwt.unix -> test_scheduler.ocaml4.ml))))

(library
 (package picos_meta)
 (name test_util)
 (modules test_util))

;;

(test
 (package picos_meta)
 (name test_picos)
 (modules test_picos)
 (libraries
  alcotest
  backoff
  domain_shims
  picos_std.finally
  test_scheduler
  threads.posix
  unix))

;;

(test
 (package picos_meta)
 (name test_sync)
 (modules test_sync)
 (libraries
  alcotest
  domain_shims
  picos_std.event
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler
  unix)
 (action
  (progn
   (run %{test} -- "Event" 0)
   (run %{test} -- "Lazy" 0)
   (run %{test} -- "Lazy" 1)
   (run %{test} -- "Semaphore" 0)
   (run %{test} -- "Semaphore" 1)
   (run %{test} -- "Non-cancelable ops" 0)
   (run %{test} -- "Mutex and Condition" 0)
   (run %{test} -- "Mutex and Condition" 1)
   (run %{test} -- "Mutex and Condition" 2))))

;;

(test
 (package picos_meta)
 (name test_lwt_unix)
 (modules test_lwt_unix)
 (build_if
  (>= %{ocaml_version} 5.0.0))
 (libraries picos_lwt.unix picos_std.structured alcotest))

;;

(rule
 (package picos_meta)
 (action
  (copy ../lib/picos/picos.ocaml5.ml picos.ml)))

(test
 (package picos_meta)
 (name test_picos_dscheck)
 (modules test_picos_dscheck picos)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries backoff traced_atomic dscheck alcotest))

;;

(test
 (package picos_meta)
 (name test_server_and_client)
 (modules test_server_and_client)
 (libraries
  picos_io
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler))

;;

(test
 (package picos_meta)
 (name test_io)
 (modules test_io)
 (libraries
  alcotest
  picos_aux.mpscq
  picos_io
  picos_std.finally
  picos_std.structured
  test_scheduler))

(test
 (package picos_meta)
 (name test_io_cohttp)
 (modules test_io_cohttp)
 (build_if %{lib-available:picos_io_cohttp})
 (libraries
  picos_io_cohttp
  picos_std.finally
  picos_std.structured
  test_scheduler))

;;

(test
 (package picos_meta)
 (name test_io_with_lwt)
 (modules test_io_with_lwt)
 (libraries
  alcotest
  lwt
  lwt.unix
  picos_io
  picos_io.select
  test_scheduler
  threads.posix))

;;

(test
 (package picos_meta)
 (name test_select)
 (modules test_select)
 (libraries
  alcotest
  domain_shims
  picos_io.select
  picos_mux.thread
  picos_std.finally
  picos_std.structured))

;;

(test
 (package picos_meta)
 (name test_mpscq)
 (modules test_mpscq)
 (libraries
  picos_aux.mpscq
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run))

(test
 (package picos_meta)
 (name test_mpmcq)
 (modules test_mpmcq)
 (libraries
  picos_aux.mpmcq
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run))

(rule
 (package picos_meta)
 (action
  (progn
   (copy ../lib/picos_aux.mpmcq/picos_aux_mpmcq.ml picos_aux_mpmcq.ml))))

(test
 (package picos_meta)
 (name test_mpmcq_dscheck)
 (modules test_mpmcq_dscheck picos_aux_mpmcq)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries backoff multicore-magic-dscheck dscheck alcotest)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package picos_meta)
 (name test_htbl)
 (modules test_htbl)
 (libraries
  picos_aux.htbl
  qcheck-core
  qcheck-multicoretests-util
  qcheck-stm.stm
  stm_run))

;;

(test
 (package picos_meta)
 (name test_js_of_ocaml)
 (modules test_js_of_ocaml)
 (modes js)
 (js_of_ocaml
  (flags --enable=effects))
 (build_if
  (and
   (<> %{os_type} Win32)
   (<> %{architecture} i386)
   (<> %{architecture} riscv)))
 (libraries picos))

;;

(test
 (package picos_meta)
 (name test_schedulers)
 (modules test_schedulers)
 (libraries
  alcotest
  backoff
  domain_shims
  picos
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler
  test_util
  unix))

;;

(test
 (package picos_meta)
 (name test_structured)
 (modules test_structured)
 (libraries
  alcotest
  picos
  picos_aux.mpscq
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler
  test_util))

;;

(test
 (package picos_meta)
 (name test_finally)
 (modules test_finally)
 (libraries alcotest picos picos_std.finally test_scheduler test_util))

;;

(test
 (package picos_meta)
 (name test_picos_lwt_unix_with_cohttp)
 (modules test_picos_lwt_unix_with_cohttp)
 (build_if
  (and
   (>= %{ocaml_version} 5)
   %{lib-available:cohttp-lwt-unix}
   %{lib-available:conduit-lwt-unix}))
 (libraries
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  conduit-lwt-unix
  picos_lwt.unix
  picos_std.structured
  unix
  uri))
