(test
 (package picos_meta)
 (name test_picos)
 (modules test_picos)
 (libraries
  alcotest
  backoff
  domain_shims
  picos_std.finally
  test_scheduler
  threads.posix
  unix))

;;

(test
 (package picos_meta)
 (name test_sync)
 (modules test_sync)
 (libraries
  alcotest
  domain_shims
  picos_std.event
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler
  unix)
 (action
  (progn
   (run %{test} -- "^Mutex and Condition$" 0)
   (run %{test} -- "^Mutex and Condition$" 1)
   (run %{test} -- "^Mutex and Condition$" 2)
   (run %{test} -- "^Lock and Lock.Condition$" 0)
   (run %{test} -- "^Lock and Lock.Condition$" 1)
   (run %{test} -- "^Lock and Lock.Condition$" 2)
   (run %{test} -- "^Lock and Lock.Condition$" 3)
   (run %{test} -- "^Rwlock and Rwlock.Condition$" 0)
   (run %{test} -- "^Rwlock and Rwlock.Condition$" 1)
   (run %{test} -- "^Rwlock and Rwlock.Condition$" 2)
   (run %{test} -- "^Rwlock and Rwlock.Condition$" 3)
   (run %{test} -- "^Rwlock and Rwlock.Condition$" 4)
   (run %{test} -- "^Rwlock and Rwlock.Condition$" 5)
   (run %{test} -- "^Rwlock and Rwlock.Condition$" 6)
   (run %{test} -- "^Semaphore$" 0)
   (run %{test} -- "^Semaphore$" 1)
   (run %{test} -- "^Sem$" 0)
   (run %{test} -- "^Sem$" 1)
   (run %{test} -- "^Sem$" 2)
   (run %{test} -- "^Sem$" 3)
   (run %{test} -- "^Lazy$" 0)
   (run %{test} -- "^Lazy$" 1)
   (run %{test} -- "^Event$" 0)
   (run %{test} -- "^Barrier$" 0)
   (run %{test} -- "^Barrier$" 1)
   (run %{test} -- "^Non-cancelable ops$" 0)
   ;;
   )))

(test
 (package picos_meta)
 (name test_lock)
 (modules test_lock)
 (libraries picos picos_std.sync stm_run stm_wrap))

(test
 (package picos_meta)
 (name test_mutex)
 (modules test_mutex)
 (libraries picos picos_std.sync stm_run stm_wrap))

(test
 (package picos_meta)
 (name test_sem)
 (modules test_sem)
 (libraries picos picos_std.sync stm_run stm_wrap))

(test
 (package picos_meta)
 (name test_rwlock)
 (modules test_rwlock)
 (libraries picos picos_std.sync stm_run stm_wrap))

(test
 (package picos_meta)
 (name test_sync_queue)
 (modules test_sync_queue)
 (libraries picos_std.sync stm_run stm_wrap))

;;

(test
 (package picos_meta)
 (name test_lwt_unix)
 (modules test_lwt_unix)
 (build_if
  (>= %{ocaml_version} 5.0.0))
 (libraries picos_lwt.unix picos_std.structured alcotest))

;;

(rule
 (package picos_meta)
 (action
  (copy ../lib/picos/picos.ocaml5.ml picos.ml)))

(test
 (package picos_meta)
 (name test_picos_dscheck)
 (modules test_picos_dscheck picos)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries backoff traced_atomic dscheck alcotest))

;;

(test
 (package picos_meta)
 (name test_server_and_client)
 (modules test_server_and_client)
 (libraries
  picos_io
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler))

;;

(test
 (package picos_meta)
 (name test_io)
 (modules test_io)
 (libraries
  alcotest
  picos_aux.mpscq
  picos_io
  picos_std.finally
  picos_std.structured
  test_scheduler))

(test
 (package picos_meta)
 (name test_io_cohttp)
 (modules test_io_cohttp)
 (libraries
  picos_io_cohttp
  picos_std.finally
  picos_std.structured
  test_scheduler))

;;

(test
 (package picos_meta)
 (name test_io_with_lwt)
 (modules test_io_with_lwt)
 (libraries
  alcotest
  lwt
  lwt.unix
  picos_io
  picos_io.select
  test_scheduler
  threads.posix))

;;

(test
 (package picos_meta)
 (name test_select)
 (modules test_select)
 (libraries
  alcotest
  domain_shims
  picos_io.select
  picos_mux.thread
  picos_std.finally
  picos_std.structured))

;;

(test
 (package picos_meta)
 (name test_mpscq)
 (modules test_mpscq)
 (libraries picos_aux.mpscq stm_run))

(test
 (package picos_meta)
 (name test_mpmcq)
 (modules test_mpmcq)
 (libraries picos_aux.mpmcq stm_run))

(rule
 (package picos_meta)
 (action
  (progn
   (copy ../lib/picos_aux.mpmcq/picos_aux_mpmcq.ml picos_aux_mpmcq.ml))))

(test
 (package picos_meta)
 (name test_mpmcq_dscheck)
 (modules test_mpmcq_dscheck picos_aux_mpmcq)
 (build_if
  (>= %{ocaml_version} 5))
 (libraries backoff multicore-magic-dscheck dscheck alcotest)
 (flags
  (:standard -open Multicore_magic_dscheck)))

(test
 (package picos_meta)
 (name test_htbl)
 (modules test_htbl)
 (libraries picos_aux.htbl stm_run))

;;

(test
 (package picos_meta)
 (name test_js_of_ocaml)
 (modules test_js_of_ocaml)
 (modes js)
 (js_of_ocaml
  (flags --enable=effects))
 (build_if
  (and
   (<> %{os_type} Win32)
   (<> %{architecture} i386)
   (<> %{architecture} riscv)))
 (action
  ;; It is fine if 'node:fs' cannot be found.  js_of_ocaml>=5.9 does not like
  ;; old node versions.
  (with-accepted-exit-codes
   (or 0 1)
   (run node %{test})))
 (libraries picos))

;;

(test
 (package picos_meta)
 (name test_schedulers)
 (modules test_schedulers)
 (libraries
  alcotest
  backoff
  domain_shims
  picos
  picos_domain
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler
  test_util
  unix))

;;

(test
 (package picos_meta)
 (name test_structured)
 (modules test_structured)
 (libraries
  alcotest
  picos
  picos_aux.mpscq
  picos_std.finally
  picos_std.structured
  picos_std.sync
  test_scheduler
  test_util))

;;

(test
 (package picos_meta)
 (name test_finally)
 (modules test_finally)
 (libraries alcotest picos picos_std.finally test_scheduler test_util))

;;

(test
 (package picos_meta)
 (name test_picos_lwt_unix_with_cohttp)
 (modules test_picos_lwt_unix_with_cohttp)
 (build_if
  (and
   (>= %{ocaml_version} 5)
   %{lib-available:conduit-lwt-unix}))
 (libraries
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  conduit-lwt-unix
  picos_lwt.unix
  picos_std.structured
  unix
  uri))
