(library
 (name picos_domain)
 (public_name picos.domain))

(rule
 (package picos)
 (enabled_if
  (< %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy picos_domain.ocaml4.ml picos_domain.ml))))

(rule
 (package picos)
 (enabled_if
  (>= %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy picos_domain.ocaml5.ml picos_domain.ml))))
