(library
 (name picos_thread)
 (public_name picos.thread)
 (js_of_ocaml
  (javascript_files thread.js))
 (libraries
  (select
   picos_thread.ml
   from
   (threads.posix thread-local-storage -> picos_thread.posix.ml)
   (picos.domain !threads.posix -> picos_thread.none.ml))))

(rule
 (package picos)
 (enabled_if
  (< %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy thread.ocaml4.js thread.js))))

(rule
 (package picos)
 (enabled_if
  (>= %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy thread.ocaml5.js thread.js))))
