(library
 (name exn_bt)
 (public_name exn_bt))

(rule
 (enabled_if
  (< %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy exn_bt.ocaml4.ml exn_bt.ml)
   (copy exn_bt.ocaml4.mli exn_bt.mli))))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0.0))
 (action
  (progn
   (copy exn_bt.ocaml5.ml exn_bt.ml)
   (copy exn_bt.ocaml5.mli exn_bt.mli))))
