(library
 (name picos_io_select)
 (public_name picos_io.select)
 (optional)
 (libraries
  (re_export picos)
  (re_export picos_io.fd)
  (re_export picos_std.event)
  (re_export unix)
  backoff
  mtime
  mtime.clock.os
  multicore-magic
  picos.domain
  picos.thread
  picos_aux.htbl
  picos_io_thread_atomic
  psq
  threads.posix))

(mdx
 (package picos_meta)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries
  picos
  picos_io
  picos_io.select
  picos_mux.random
  picos_std.event
  picos_std.finally
  picos_std.structured
  unix)
 (files picos_io_select.mli))
