(library
 (name picos_io)
 (public_name picos_io)
 (root_module Deps)
 (libraries
  (re_export picos)
  (re_export picos_io_fd)
  (re_export unix)
  picos_aux.htbl
  picos_io.select))

(mdx
 (package picos_meta)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries
  picos
  picos_io
  picos_mux.random
  picos_std.finally
  picos_std.structured
  unix)
 (files picos_io.mli))

(documentation
 (package picos_io)
 (mld_files index))
