(library
 (name picos_io_cohttp)
 (public_name picos_io_cohttp)
 (optional)
 (libraries
  (re_export cohttp)
  (re_export picos_io)
  (re_export uri)
  fmt
  picos_std.finally
  picos_std.structured))

(mdx
 (package picos_meta)
 (enabled_if
  (and
   (<> %{system} "openbsd")
   (>= %{ocaml_version} 5.1.0)
   (= %{env:OPAM_REPO_CI=false} false)))
 (libraries
  cohttp
  http
  picos_io
  picos_io_cohttp
  picos_mux.random
  picos_std.finally
  picos_std.structured
  uri)
 (files picos_io_cohttp.mli))

(documentation
 (package picos_io_cohttp)
 (mld_files index))
