(library
 (name picos_select)
 (public_name picos.select)
 (optional)
 (libraries
  (re_export picos)
  (re_export picos.exn_bt)
  (re_export picos.fd)
  (re_export unix)
  picos.domain
  picos.thread
  picos.htbl
  picos_thread_atomic
  backoff
  threads.posix
  psq
  mtime
  mtime.clock.os))

(mdx
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries
  foundation
  picos
  picos.exn_bt
  picos.stdio
  picos.fifos
  picos.select
  unix)
 (files picos_select.mli))
