(library
 (name picos_stdio_select)
 (public_name picos_stdio.select)
 (optional)
 (libraries
  (re_export picos)
  (re_export picos.exn_bt)
  (re_export picos_stdio.fd)
  (re_export picos.sync)
  (re_export unix)
  picos.domain
  picos.thread
  picos.htbl
  picos.thread_atomic
  backoff
  threads.posix
  psq
  multicore-magic
  mtime
  mtime.clock.os))

(mdx
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (package picos_stdio)
 (libraries
  picos
  exn_bt
  picos.finally
  picos.randos
  picos_stdio.select
  picos.stdio
  picos.structured
  picos.sync
  unix)
 (files picos_stdio_select.mli))
